# bounty-radar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: scan.yml  verify_telegram.yml
src/: verify_telegram.py
src/bounty_radar/: __init__.py  cover_letter.py  filters.py  github_client.py  scanner.py  telegram.py
tests/: test_scanner.py
